Added profile page and server script

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hostel Management System - Login</title>
+    <title> MIT Hostel Management System - Login</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
     <div class="login-container">
         <div class="login-box">
             <div class="login-header">
-                <h2>Hostel Management System</h2>
+                <h2>MIT Hostel Management System</h2>
                 <p>Please select your login type</p>
             </div>
             <div class="login-options">
@@ -31,7 +31,7 @@
                 </a>
             </div>
             <div class="login-footer">
-                <p>&copy; 2024 College Project</p>
+                <p>&copy; MIT College Project</p>
             </div>
         </div>
     </div>
