--- a/frontend/student_dashboard.html
+++ b/frontend/student_dashboard.html
@@ -17,7 +17,7 @@
                 <li class="active"><a href="student_dashboard.html">
                     <span class="icon"><!-- Dashboard Icon --></span> Dashboard
                 </a></li>
-                <li><a href="#">
+                <li><a href="my_profile.html">
                     <span class="icon"><!-- Profile Icon --></span> My Profile
                 </a></li>
                 <!-- Add other links as needed -->
