--- a/frontend/admin_login.html
+++ b/frontend/admin_login.html
@@ -27,7 +27,7 @@
             </form>
             <div class="login-footer">
                 <p><a href="index.html">Back to Home</a></p>
-                <p>&copy; 2024 College Project</p>
+                <p>&copy; College Project</p>
             </div>
         </div>
     </div>
